--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@
     animation: spin 1.5s linear infinite;
   }
 }
+.comment-box {
+  min-width: 150px; /* 최소 너비 증가 */
+  max-width: 500px; /* 최대 너비 증가 */
+  white-space: normal; /* 텍스트가 여러 줄로 표시되도록 변경 */
+  text-align: center; /* 왼쪽 정렬로 변경 */
+  display: none; /* 기본적으로 숨김 */
+  word-wrap: break-word; /* 긴 단어가 있을 경우 줄바꿈 */
+  position: absolute; /* 절대 위치 */
+  z-index: 10; /* 다른 요소 위에 표시 */
+}
+
+/* 주석 참조에 마우스를 올렸을 때 주석 박스 표시 */
+.comment-ref:hover .comment-box {
+  display: block; /* 마우스를 올렸을 때 표시 */
+}
