--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    font-family: 'pretendard', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+    background-color: #f8f9fa;
+  }
+
+  /*h1, h2, h3, h4, h5, h6 {*/
+  /*  font-weight: bold;*/
+  /*  margin-top: 1rem;*/
+  /*  margin-bottom: 0.5rem;*/
+  /*}*/
+  /**/
+  /*p {*/
+  /*  margin-bottom: 1rem;*/
+  /*}*/
+  /**/
+  /*a {*/
+  /*  color: #007bff;*/
+  /*  text-decoration: none;*/
+  /*}*/
+  /**/
+  /*a:hover {*/
+  /*  text-decoration: underline;*/
+  /*}*/
+}
+
 @layer utilities {
   .animate-spin-slow {
     animation: spin 1.5s linear infinite;
@@ -22,3 +51,51 @@
 .comment-ref:hover .comment-box {
   display: block; /* 마우스를 올렸을 때 표시 */
 }
+
+
+
+.marquee {
+  overflow: hidden;
+  position: relative;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.marquee-track {
+  display: inline-block;
+  white-space: nowrap;
+  /* flex 적용해도 무관 */
+  will-change: transform;
+}
+
+.animate-marquee-left {
+  animation: marquee-left 50s linear infinite;
+}
+.animate-marquee-right {
+  animation: marquee-right 50s linear infinite;
+}
+
+@keyframes marquee-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes marquee-right {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+
+
+@import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
+
+
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
